* [minor breaking] you likely don't need to change your code

// DO NOT EDIT: the "Unreleased" section header is automatically updated by bb publish
// bb publish will fail on any of:
// - unreleased section not found,
// - unreleased section empty
// - optional attribute is not [breaking] or [minor breaking]
//   (adjust these in publish.clj as you see fit)
== Unreleased

== v1.2.23 - 2023-02-13 [[v1.2.23]]

* Bump stale deps, some of which had vulnerabilities
(https://github.com/clj-commons/pomegranate/issues/134[#134])
(https://github.com/lread[@lread])
* Don't accept empty but truthy `:repositories`
(https://github.com/clj-commons/pomegranate/pull/133[#133])
(https://github.com/vemv[@vemv])
* General quality
** Review and update docs and docstrings.
(https://github.com/clj-commons/pomegranate/issues/149[#149])
(https://github.com/clj-commons/pomegranate/issues/153[#153])
(https://github.com/lread[@lread])
** Update automated testing to cover Linux, Windows, current JDKs, and Clojure v1.4+
(https://github.com/clj-commons/pomegranate/issues/137[#137])
(https://github.com/lread[@lread])
** Add automated check for vulnerabilities in dependencies
(https://github.com/clj-commons/pomegranate/pull/135[#135])
(https://github.com/lread[@lread])
** Address all reflection warnings
(https://github.com/clj-commons/pomegranate/pull/131[#131])
(https://github.com/vemv[@vemv])
** Add automated clj-kondo linting
(https://github.com/clj-commons/pomegranate/pull/139[#139])
(https://github.com/lread[@lread])
** Add automated release workflow
(https://github.com/clj-commons/pomegranate/pull/138[#138])
(https://github.com/lread[@lread])
** Dependencies now specified only once
(https://github.com/clj-commons/pomegranate/pull/136[#136])
(https://github.com/lread[@lread])
** Review and update classpath related tests
(https://github.com/clj-commons/pomegranate/pull/154[#154])
(https://github.com/lread[@lread])
